--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,12 +2,13 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+  background-color: antiquewhite
 }
 
 header {
   height: 100px;
   border-bottom: 1px solid #000;
-  margin-bottom: 40px;
+  margin: 40px auto;
 }
 
 h1 {
@@ -25,21 +26,25 @@ h1 {
 .card {
   display: inline-block;
   margin: 10px;
-  border: 1px solid #000;
+  border: 2px solid #ffffff;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   vertical-align: top;
   max-height: 100%;
+  border-radius: 15px;
 }
 
 .card img {
   display: block;
   width: 300px;
   height: 300px;
+  border-radius: 15px 15px 0 0;
 }
 
 .card details {
   display: inline-block;
   width: 300px;
   height: auto;
+  cursor: pointer;
 }
 
 .card summary {
@@ -61,8 +66,14 @@ details[open] summary {
 }
 
 @media (max-width: 768px) {
+ 
+  body {
+    margin: auto 25px;
+  }
+
   header {
-    margin-bottom: 20px;
+    max-width: 690px;
+    margin-bottom: 50px;
     height: 200px;
   }
   header h1 {
@@ -84,5 +95,16 @@ details[open] summary {
   }
   .card details p {
     font-size: 14px;
+  }
+}
+
+@media (max-width: 427px) {
+
+  header {
+    min-width: 365px;
+    
+  }
+  header p {
+    max-width: 320px;
   }
 }
