--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,55 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 body {
+  background-color: antiquewhite;
   font-family: "Open Sans", sans-serif;
-  background-color: antiquewhite
 }
 
 header {
-  height: 100px;
   border-bottom: 1px solid #000;
+  height: 100px;
   margin: 40px auto;
 }
 
 h1 {
-  text-transform: uppercase;
   margin-bottom: 0;
+  text-transform: uppercase;
 }
 
 .card-section {
   display: block;
-  width: 100%;
-  max-width: 1024px;
   margin: 0 auto;
+  max-width: 1024px;
+  width: 100%;
 }
 
 .card {
+  border: 2px solid #ffffff;
+  border-radius: 15px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   display: inline-block;
   margin: 10px;
-  border: 2px solid #ffffff;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  vertical-align: top;
   max-height: 100%;
-  border-radius: 15px;
+  vertical-align: top;
 }
 
 .card img {
-  display: block;
-  width: 300px;
-  height: 300px;
   border-radius: 15px 15px 0 0;
+  display: block;
+  height: 300px;
+  width: 300px;
 }
 
 .card details {
-  display: inline-block;
-  width: 300px;
-  height: auto;
   cursor: pointer;
+  display: inline-block;
+  height: auto;
+  width: 300px;
 }
 
 .card summary {
-  list-style-type: " ✦ ";
   font-size: 18px;
+  list-style-type: " ✦ ";
   padding: 10px;
 }
 details[open] summary {
@@ -65,16 +65,21 @@ details[open] summary {
   font-style: italic;
 }
 
+@media (min-width: 1200px) {
+  header {
+    text-align: center;
+  }
+}
+
 @media (max-width: 768px) {
- 
   body {
     margin: auto 25px;
   }
 
   header {
-    max-width: 690px;
-    margin-bottom: 50px;
     height: 200px;
+    margin-bottom: 50px;
+    max-width: 690px;
   }
   header h1 {
     font-size: 36px;
@@ -84,8 +89,8 @@ details[open] summary {
     margin: 20px 10px;
   }
   .card img {
-    width: 100%;
     height: 100%;
+    width: 100%;
   }
   .card details {
     width: 100%;
@@ -99,10 +104,8 @@ details[open] summary {
 }
 
 @media (max-width: 427px) {
-
   header {
     min-width: 365px;
-    
   }
   header p {
     max-width: 320px;
